# rust-bitcoinkernel

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: Cargo.toml
examples/src/: script_debug.rs
libbitcoinkernel-sys/: Cargo.toml  build.rs
libbitcoinkernel-sys/bitcoin/src/: coins.cpp  coins.h  validation.cpp  validation.h
libbitcoinkernel-sys/bitcoin/src/kernel/: CMakeLists.txt  bitcoinkernel.cpp  bitcoinkernel.h  bitcoinkernel_wrapper.h
libbitcoinkernel-sys/bitcoin/src/script/: debug.cpp  debug.h  interpreter.cpp
libbitcoinkernel-sys/bitcoin/src/test/kernel/: test_kernel.cpp
src/: lib.rs
src/core/: block.rs  mod.rs  script_debug.rs  verify.rs
src/ffi/: constants.rs
src/state/: chainstate.rs
tests/: test.rs
