[package]
name = "bitcoinkernel"
version = "0.2.0"
edition = "2021"
rust-version =  "1.71.0"
authors = ["sedited <seb.kung@gmail.com>"]
description = "Safe Rust bindings to libbitcoinkernel"
license = "MIT"
repository = "https://github.com/sedited/rust-bitcoinkernel"
documentation = "https://docs.rs/bitcoinkernel"
keywords = ["bitcoin", "ffi", "libbitcoinkernel"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"

[features]
script_debug = ["libbitcoinkernel-sys/script_debug"]

[dependencies]
libbitcoinkernel-sys = { path = "libbitcoinkernel-sys", version = "0.2.0" }

[dev-dependencies]
hex = "0.4"
env_logger = "0.11"
log = "0.4"
tempdir = "0.3"

[workspace]
members = [
    "examples",
    "fuzz",
    "libbitcoinkernel-sys"
]
